--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -23,7 +23,7 @@
     <div data-aos="fade-left" class="right-section">
         <div class="profile-circle-container">
             <div class="profile-circle">
-                <img class="img" src="assets/profile-circle.png" alt="">
+                <img class="img" src="assets/my_photo2.png" alt="">
             </div>
             <div class="decorate-line"></div>
         </div>
