--- a/src/app/first-section/first-section.component.html
+++ b/src/app/first-section/first-section.component.html
@@ -1,7 +1,7 @@
 <div id="first-section" class="content">
     <img class="background-section" src="assets/background.png" alt="">
     <div data-aos="fade-up" class="left-content">
-        <img class="my-profile" src="assets/my-photo.png">
+        <img class="my-profile" src="assets/my_photo.png">
         <img class="behind_the_picture" src="assets/behind_the_picture.png">
     </div>
     <div data-aos="fade-down" class="right-content">
@@ -31,7 +31,7 @@
             </a>
         </div>
         <span class="e-mail">
-            <a [href]="'mailto:' + 'Marbach.A' + '&#64;' + 'gmx.net'">Marbach.A&#64;gmx.net</a>
+            <a [href]="'mailto:' + 'mail' + '&#64;' + 'artur-marbach.de'">mail&#64;artur-marbach.de</a>
         </span>
     </div>
 </div>
