--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -4,10 +4,12 @@
     padding-top: 80px;
     background-color: #141D2F;
     display: flex;
+    justify-content: space-between;
     color: white;
     padding-bottom: 80px;
     overflow: hidden;
     font-size: 16px;
+    z-index: 20;
 }
 
 .background-shadow-img {
@@ -31,32 +33,35 @@ h1 {
 }
 
 h1.deutsch {
-    font-size: 60px;
+    font-size: 56px;
 }
 
 .right-section {
-    width: 50%;
-    padding-left: 150px;
+    width: 40%;
+   
+    padding-right: 100px;
     padding-top: 100px;
-    z-index: 5;
+    z-index: 30;
 }
 
 .profile-circle {
     border: 4px solid #1CDAE6;
     border-radius: 50%;
+    z-index: 30;
 }
 
 .img {
     border-radius: 50%;
-    height: 500px;
-    width: 500px;
+    height: 400px;
+    width: 400px;
     object-fit: cover;
-    object-position: center;
+    object-position: top;
 }
 
 .profile-circle-container {
     display: flex;
     align-items: center;
+    z-index: 30;
 }
 
 .decorate-line {
