--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,6 @@
     <div class="container">
       <div>
         <div *ngIf="isInprintOrAgbPage(); else normalContent">
-          <app-header></app-header>
           <router-outlet></router-outlet>
           <app-footer></app-footer>
         </div>
@@ -19,9 +18,11 @@
         </ng-template>
       </div>
     </div>
-    <div class="bottom-line"></div>
-      <img class="background" src="assets/background.png" alt="">
-      <img class="background-shadow" src="assets/purple-shadow.png" alt="">
-      <img class="decorate-img" src="assets/green_shadow.png" alt="">
-      <img src="assets/vector.png" alt class="decorate-img-portfolio">
-      <img src="assets/green-shadow.png" alt class="decorate-image-portfolio">
+    <div class="bottom-line"*ngIf="!isInprintOrAgbPage()"></div>
+      <img class="background" src="assets/background.png" alt=""*ngIf="!isInprintOrAgbPage()">
+      <img class="background-shadow" src="assets/purple-shadow.png" alt=""*ngIf="!isInprintOrAgbPage()">
+      <img class="decorate-img" src="assets/green_shadow.png" alt=""*ngIf="!isInprintOrAgbPage()">
+      <img src="assets/vector.png" alt class="decorate-img-portfolio"*ngIf="!isInprintOrAgbPage()">
+      <img src="assets/green-shadow.png" alt class="decorate-image-portfolio"*ngIf="!isInprintOrAgbPage()">
+      <img class="background-shadow-2" src="assets/purple-shadow.png" alt=""*ngIf="!isInprintOrAgbPage()">
+
