--- a/src/app/first-section/first-section.component.scss
+++ b/src/app/first-section/first-section.component.scss
@@ -3,7 +3,7 @@
     background-color: #141D2F;
     height: 85vh;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
 }
 
@@ -12,15 +12,18 @@
     justify-content: center;
     align-items: center;
     position: relative;
-    width: 45%;
+    // width: 45%;
     height: 100%;
     z-index: 9;
+    padding-left: 100px;
 }
 
 .my-profile {
-    z-index: 3;
+    z-index: 2;
     width: 100%;
-    height: auto;
+    height: 90%;
+    object-fit: contain;
+    margin-top: -160px;
 }
 
 .behind_the_picture {
@@ -28,20 +31,25 @@
     z-index: 1;
     width: 100%;
     height: auto;
+    margin-top: -80px;
 }
 
 .right-content {
-    margin-top: 100px;
-    width: 55%;
-    z-index: 3;
+    padding-top: 80px;
+    // width: 55%;
+    z-index: 15;
     display: flex;
+    margin-top: -300px;
+    padding-left: 50px;
+    padding-right: 100px;
 }
 
 .background-section {
     position: absolute;
-    max-width: 100%;
-    top: 250px;
-    z-index: 1;
+    width: 100%;
+    height: 190px;
+    bottom: 0;
+    z-index: 11;
     display: none;
 }
 
@@ -80,17 +88,17 @@ a {
 
 .name {
     color: white;
-    font-size: 53px;
+    font-size: 42px;
 }
 
 
 .front-end-developer {
     color: #4441E5;
-    font-size: 40px;
+    font-size: 30px;
 }
 
 .scroll-down-vertikal {
-    z-index: 11;
+    z-index: 12;
     font-size: 24px;
     position: absolute;
     bottom: 80px;
@@ -132,8 +140,8 @@ a {
 
 .vertikal {
     color: white;
-    font-size: 48px;
-    margin-top: 130px;
+    font-size: 32px;
+    margin-top: 93px;
     writing-mode: vertical-lr;
     text-orientation: mixed;
     display: inline-block;
@@ -143,7 +151,7 @@ a {
 }
 
 .vertikal.deutsch {
-    font-size: 30px;
+    font-size: 21px;
 }
 
 .line {
@@ -196,133 +204,217 @@ a {
     cursor: pointer;
 }
 
-@media screen and (max-width:1440px) {
-    .background-section {
-        display: block;
+
+
+// @media (min-width: 1920px) {
+//    .my-profile{
+//     height: 60%;
+//    }
+
+//    .content{
+//     margin-top: -244px;
+//    }
+// }
+
+@media (width: 820px) and (height:1180px){
+    .content{
+        flex-direction: column;
+       
+    }
+    .my-profile{
+        width: 100%;
+        height: 130%;
+        margin-top: -100px;
+    }
+    .left-content{
+        padding-left: 25px;
+        height: 45vh;
+    }
+
+    .right-content{
+        width: 100%;
+       
+        padding-top: 0;
+        margin-top: 100px;
+        justify-content: center;
+    }
+
+    .contact{
+        bottom: -55px;
     }
 }
 
-@media screen and (max-width:1100px) {
-    .content {
-        flex-direction: column;
-        height: auto;
+
+@media (max-width:1440px) {
+    .background-section {
+        display: block;
     }
 
-    .left-content {
-        width: 100%;
-        height: 40vh;
-    }
 
-    .my-profile {
+
+
+
+}
+
+@media (max-width:1048px) {
+    .right-content {
+        padding-left: 0;
         width: 50%;
     }
 
+
+    // .contact {
+    //     bottom: -108px;
+    //     left: 100px;
+    // }
+
+    // .button {
+    //     margin-top: 0;
+    // }
+}
+
+// @media screen and (max-width:950px) {
+//     .contact {
+//         left: 25px
+//     }
+
+//     .e-mail {
+//         display: none;
+//     }
+// }
+// @media (max-width: 1300px) and (min-height: 950px) {
+//     .right-content{
+//         padding-left: 0;
+//     }
+//     .name{
+//         font-size: 36px;
+//     }
+//     .front-end-developer{
+//         font-size: 26px;
+//     }
+
+//     .vertikal{
+//         font-size: 28px;
+//         margin-top: 80px;
+//     }
+//   }
+  
+
+//   @media (max-width: 870px) and (min-height: 950px){
+//     .name{
+//         font-size: 28px;
+//     }
+//     .front-end-developer{
+//         font-size: 22px;
+//     }
+
+//     .vertikal{
+//         font-size: 22px;
+//         margin-top: 62px;
+//     }
+//   }
+
+@media (max-width:950px) {
     .scroll-down-vertikal {
         display: none;
     }
 
     .right-content {
-        width: 100%;
-        display: flex;
-        justify-content: center;
-    }
-
-    .behind_the_picture {
-        width: 50%;
-        margin-top: 160px;
-        z-index: 1;
+        padding-right: 25px;
     }
 
     .contact {
-        bottom: -108px;
-        left: 100px;
-    }
-
-    .button {
-        margin-top: 0;
+        left: 25px;
     }
 }
 
-@media screen and (max-width:950px) {
-    .contact {
-        left: 25px
-    }
-
-    .e-mail {
-        display: none;
-    }
-}
-
-@media screen and (max-width:900px) {
-    .my-profile {
-        max-width: 63%;
-        min-width: 500px;
-    }
-
-    .behind_the_picture {
-        max-width: 63%;
-        min-width: 500px;
-    }
-}
-
-@media screen and (max-width:600px) {
+@media (max-width:850px) {
     .name {
-        font-size: 40px;
+        font-size: 34px;
     }
-
-    .front-end-developer {
-        font-size: 32px;
-    }
-
-    .vertikal {
-        font-size: 36px;
-        margin-top: 101px;
-    }
-
     .vertikal.deutsch {
-        font-size: 23px;
-    }
-}
-
-@media screen and (max-width:550px) {
-    .my-profile {
-        min-width: 100%;
-    }
-
-    .behind_the_picture {
-        min-width: 100%;
-    }
-
-    .right-content {
-        margin-top: 55px;
-    }
-
-    .left-content {
-        height: 50vh;
-    }
-
-    .background {
-        height: 350px;
-    }
-}
-
-@media screen and (max-width:450px) {
-    .name {
-        font-size: 32px;
+        font-size: 18px;
     }
 
     .front-end-developer {
-        font-size: 26px;
+        font-size: 24px;
     }
 
     .vertikal {
         font-size: 28px;
         margin-top: 79px;
     }
+}
 
-    .vertikal.deutsch {
-        font-size: 19px;
+@media (max-width:760px) {
+    .content {
+        flex-direction: column;
     }
+
+    .background-section{
+        height: 355px;
+    }
+
+    .left-content {
+        margin-top: 0;
+        height: 45.5vh;
+        width: 100%;
+        padding-left: 25px;
+        padding-right: 25px;
+    }
+
+    .my-profile{
+        margin-top: 0;
+        height: 130%;
+    }
+    .right-content {
+        height: 45.5vh;
+        margin-top: 0;
+        width: 100%;
+        justify-content: center;
+        padding-left: 25px;
+        padding-right: 25px;
+        padding-top: 60px;
+    }
+
+    .button{
+        margin-right: 40px;
+        margin-top: 30px;
+    }
+
+    .behind_the_picture{
+        margin-top: 0;
+        height: 100%;
+        padding-top: 120px;
+    }
+
+    .contact {
+       bottom: -60px;
+    }
+
+    .e-mail{
+       display: none;
+    }
+}
+
+
+@media (max-width:600px) {
+    
+
+    
+
+   
+}
+
+@media (max-width:550px) {
+    .background {
+        height: 350px;
+    }
+}
+
+@media (max-width:480px) {
+    
+   
 
     .button {
         margin-top: 16px;
