--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -47,8 +47,8 @@ h2 {
 .footer-line {
     position: absolute;
     top: 0;
-    left: -250px;
-    width: 180vw;
+    left: 0;
+    width: 100%;
     height: 4px;
     background-color: #1CDAE6;
     display: none;
