--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,11 +1,13 @@
 <nav id="nav">
-  <a class="name" href="/"> Ar<span class="colored-letter">t</span>ur</a>
-  <div [class.deutsch]="currentLanguage === 'de'" class="link-section">
-    <a href="#about-me">{{ 'About me' | translate }}</a>
-    <a href="#skills">{{ 'Skills' | translate }}</a>
-    <a href="#portfolio">Portfolio</a>
-    <button (click)="switchLanguage('en')" [class.selected]="currentLanguage === 'en'">En</button>
-    <button (click)="switchLanguage('de')" [class.selected]="currentLanguage === 'de'">De</button>
+  <div class="nav-container">
+    <a class="name" href="/"> Ar<span class="colored-letter">t</span>ur</a>
+    <div [class.deutsch]="currentLanguage === 'de'" class="link-section">
+      <a href="#about-me">{{ 'About me' | translate }}</a>
+      <a href="#skills">{{ 'Skills' | translate }}</a>
+      <a href="#portfolio">Portfolio</a>
+      <button (click)="switchLanguage('en')" [class.selected]="currentLanguage === 'en'">En</button>
+      <button (click)="switchLanguage('de')" [class.selected]="currentLanguage === 'de'">De</button>
+    </div>
   </div>
   <div class="menu display-none">
     <a id="header" href="#" (click)="menuContent($event)">
@@ -26,4 +28,5 @@
       </div>
     </div>
   </div>
-</nav>
+</nav> 
+
