--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -13,11 +13,11 @@
 }
 
 .background-shadow-img {
-    height: 600px;
-    width: 600px;
+    height: 300px;
+    width: 300px;
     position: absolute;
-    top: 160px;
-    right: -200px;
+    top: 200px;
+    right: 0;
     z-index: 1;
     display: none;
 }
