--- a/src/styles.scss
+++ b/src/styles.scss
@@ -77,15 +77,15 @@ top: 4000px;
   z-index: 20;
 }
 
-.bottom-line {
-  position: absolute;
-  z-index: 2;
-  bottom: -4250px;
-  width: 100%;
-  height: 4px;
-  left: 0;
-  background-color: #1CDAE6;
-}
+// .bottom-line {
+//   position: absolute;
+//   z-index: 2;
+//   bottom: -4250px;
+//   width: 100%;
+//   height: 4px;
+//   left: 0;
+//   background-color: #1CDAE6;
+// }
 
 
 
