--- a/src/app/my-skills/my-skills.component.scss
+++ b/src/app/my-skills/my-skills.component.scss
@@ -1,261 +1,373 @@
-.my-skills-section {
-    background-color: #141D2F;
-    color: white;
-    padding-left: 100px;
-    position: relative;
-    display: flex;
-    padding-bottom: 100px;
-    padding-top: 150px;
-    overflow: hidden;
-}
+// .my-skills-section {
+//     background-color: #141D2F;
+//     color: white;
+//     padding-left: 100px;
+//     position: relative;
+//     display: flex;
+//     padding-bottom: 100px;
+//     padding-top: 150px;
+//     overflow: hidden;
+// }
 
-.decorate-img-section {
-    position: absolute;
-    height: 300px;
-    width: 300px;
-    top: 450px;
-    left: -100px;
-    z-index: 1;
-    display: none;
-}
+// .decorate-img-section {
+//     position: absolute;
+//     height: 300px;
+//     width: 300px;
+//     top: 450px;
+//     left: -100px;
+//     z-index: 1;
+//     display: none;
+// }
 
-h1 {
-    margin-top: 0;
-    font-size: 78px;
-}
+// h1 {
+//     margin-top: 0;
+//     font-size: 78px;
+// }
 
-h1.deutsch {
-    font-size: 56px;
-}
+// h1.deutsch {
+//     font-size: 56px;
+// }
 
-.left-content {
-    width: 60%;
-    display: flex;
-    flex-wrap: wrap;
-    z-index: 10;
-    gap: 25px;
-    justify-content: space-evenly;
-    align-items: center;
-}
+// .left-content {
+//     width: 60%;
+//     display: flex;
+//     flex-wrap: wrap;
+//     z-index: 10;
+//     gap: 25px;
+//     justify-content: space-evenly;
+//     align-items: center;
+// }
 
-.right-content {
-    width: 40%;
-    padding-right: 100px;
-}
+// .right-content {
+//     width: 40%;
+//     padding-right: 100px;
+// }
 
-.line {
-    margin-bottom: 35px;
-    background-color: #4441E5;
-    height: 4px;
-    width: 10%;
-}
+// .line {
+//     margin-bottom: 35px;
+//     background-color: #4441E5;
+//     height: 4px;
+//     width: 10%;
+// }
 
-.btn {
-    color: white;
-    text-align: center;
-    margin-left: 120px;
-    margin-top: 50px;
-    z-index: 10;
-    border: none;
-    margin-top: 50px;
-    font-size: 30px;
-    border-radius: 10px;
-    padding: 12px;
-    background-color: #1CDAE6;
-    cursor: pointer;
+// .btn {
+//     color: white;
+//     text-align: center;
+//     margin-left: 120px;
+//     margin-top: 50px;
+//     z-index: 10;
+//     border: none;
+//     margin-top: 50px;
+//     font-size: 30px;
+//     border-radius: 10px;
+//     padding: 12px;
+//     background-color: #1CDAE6;
+//     cursor: pointer;
 
-    &:hover {
-        background-color: #4441E5;
-        scale: 1.1;
-    }
-}
+//     &:hover {
+//         background-color: #4441E5;
+//         scale: 1.1;
+//     }
+// }
 
-.btn.deutsch{
-    margin-left: 40px;
-}
+// .btn.deutsch{
+//     margin-left: 40px;
+// }
 
-.mobile-btn {
-    display: flex;
-    justify-content: center;
-    z-index: 9;
-}
+// .mobile-btn {
+//     display: flex;
+//     justify-content: center;
+//     z-index: 9;
+// }
 
-.btn-mobile {
-    color: white;
-    text-align: center;
-    margin-top: 50px;
-    z-index: 10;
-    border: none;
-    font-size: 30px;
-    border-radius: 10px;
-    padding: 12px;
-    background-color: #1CDAE6;
-    cursor: pointer;
+// .btn-mobile {
+//     color: white;
+//     text-align: center;
+//     margin-top: 50px;
+//     z-index: 10;
+//     border: none;
+//     font-size: 30px;
+//     border-radius: 10px;
+//     padding: 12px;
+//     background-color: #1CDAE6;
+//     cursor: pointer;
 
-    &:hover {
-        background-color: #4441E5;
-        scale: 1.1;
-    }
-}
+//     &:hover {
+//         background-color: #4441E5;
+//         scale: 1.1;
+//     }
+// }
 
-.title-skills {
-    text-align: center;
-    padding-top: 14px;
-}
+// .title-skills {
+//     text-align: center;
+//     padding-top: 14px;
+// }
 
-a {
-    text-decoration: none;
-}
+// a {
+//     text-decoration: none;
+// }
 
-.skills-container {
-    text-align: center;
-    font-size: 16px;
-    display: flex;
-    flex-direction: column;
-    padding-bottom: 48px;
-    padding: 10px;
-    padding-right: 100px;
-    align-items: center;
-    min-width: 80px;
-    >img {
-        cursor: pointer;
-        height: 60px;
-        width: 60px;
-    }
+// .skills-container {
+//     text-align: center;
+//     font-size: 16px;
+//     display: flex;
+//     flex-direction: column;
+//     padding-bottom: 48px;
+//     padding: 10px;
+//     padding-right: 100px;
+//     align-items: center;
+//     min-width: 80px;
+//     >img {
+//         object-fit: contain;
+//         cursor: pointer;
+//         height: 80px;
+//         width: 80px;
+//     }
 
-    .skill-image {
-        &:hover {
-            animation: move 1s ease-in-out infinite;
-            /* Verwenden Sie die move-Animation */
+//     .skill-image {
+//         &:hover {
+//             animation: move 1s ease-in-out infinite;
+//             /* Verwenden Sie die move-Animation */
 
-            @keyframes move {
-                0% {
-                    transform: translateY(0);
-                    /* Anfangsposition */
-                }
+//             @keyframes move {
+//                 0% {
+//                     transform: translateY(0);
+//                     /* Anfangsposition */
+//                 }
 
-                50% {
-                    transform: translateY(-15px);
-                    /* Zwischenposition (hin) */
-                }
+//                 50% {
+//                     transform: translateY(-15px);
+//                     /* Zwischenposition (hin) */
+//                 }
 
-                100% {
-                    transform: translateY(0);
-                    /* Endposition (zurück) */
-                }
-            }
-        }
-    }
-}
+//                 100% {
+//                     transform: translateY(0);
+//                     /* Endposition (zurück) */
+//                 }
+//             }
+//         }
+//     }
+// }
 
-.flex {
-    width: 100%;
-    display: flex;
-    justify-content: end;
-    align-items: center;
-    padding-top: 50px;
-}
+// .flex {
+//     width: 100%;
+//     display: flex;
+//     justify-content: end;
+//     align-items: center;
+//     padding-top: 50px;
+// }
 
-@media screen and (max-width: 1440px) {
-    .decorate-img-section {
-        display: block;
-    }
-}
+// @media screen and (max-width: 1440px) {
+//     .decorate-img-section {
+//         display: block;
+//     }
+// }
 
-@media screen and (max-width: 1250px) {
-    h1 {
-        font-size: 80px;
-    }
-}
+// @media screen and (max-width: 1250px) {
+//     h1 {
+//         font-size: 80px;
+//     }
+// }
 
-@media screen and (min-width:1200px) {
-    .mobile-btn {
-        display: none;
-    }
-}
+// @media screen and (min-width:1200px) {
+//     .mobile-btn {
+//         display: none;
+//     }
+// }
 
-@media screen and (max-width: 1200px) {
-    .my-skills-section {
-        flex-direction: column-reverse;
-        justify-content: center;
-        padding-top: 100px;
-        padding-right: 100px;
-    }
+// @media screen and (max-width: 1200px) {
+//     .my-skills-section {
+//         flex-direction: column-reverse;
+//         justify-content: center;
+//         padding-top: 100px;
+//         padding-right: 100px;
+//     }
 
-    h1.deutsch {
-        font-size: 80px;
-    }
+//     h1.deutsch {
+//         font-size: 80px;
+//     }
 
-    .hide-mobile {
-        display: block;
-    }
+//     .hide-mobile {
+//         display: block;
+//     }
 
-    .right-content {
-        width: 100%;
-    }
+//     .right-content {
+//         width: 100%;
+//     }
 
-    .left-content {
-        width: 100%;
-        padding-top: 50px;
-        gap: 25px;
-        justify-content: center;
-    }
+//     .left-content {
+//         width: 100%;
+//         padding-top: 50px;
+//         gap: 25px;
+//         justify-content: center;
+//     }
 
-    .hide-desktop {
-        display: none;
-    }
+//     .hide-desktop {
+//         display: none;
+//     }
 
-    .flex {
-        justify-content: end;
+//     .flex {
+//         justify-content: end;
      
-    }
+//     }
+// }
+
+// @media (max-width:950px){
+//     .my-skills-section{
+//         padding-right: 25px;
+//     }
+// }
+
+// @media screen and (max-width: 850px) {
+//     .my-skills-section {
+//         padding-left: 5px;
+//     }
+
+//     .skills-container {
+//         padding-right: 25px;
+//         justify-content: center;
+//     }
+// }
+
+// @media screen and (max-width: 700px) {
+//     h1 {
+//         font-size: 64px;
+//     }
+
+//     h1.deutsch {
+//         font-size: 64px;
+//     }
+// }
+
+// @media screen and (max-width: 550px) {
+//     .skills-container {
+//         font-size: 18px;
+//     }
+// }
+
+// @media screen and (max-width: 500px) {
+//     h1 {
+//         font-size: 40px;
+//     }
+
+//     h1.deutsch {
+//         font-size: 40px;
+//     }
+// }
+
+// @media screen and (max-width: 400px) {
+//     .btn-mobile.deutsch {
+//         font-size: 20px;
+//     }
+// }
+
+.my-skills {
+  padding: 2rem;
+  color: white;
+  text-align: center;
+
+  h1 {
+    font-size: 48px;
+    margin-bottom: 2rem;
+  }
 }
 
-@media (max-width:950px){
-    .my-skills-section{
-        padding-right: 25px;
-    }
+.skills-grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr); // genau 3 Karten pro Reihe
+  gap: 2rem;
+  justify-items: center;
 }
 
-@media screen and (max-width: 850px) {
-    .my-skills-section {
-        padding-left: 5px;
-    }
-
-    .skills-container {
-        padding-right: 25px;
-        justify-content: center;
-    }
+/* Flip Card */
+.skill-card {
+  width: 100%;
+  max-width: 376px;
+  height: 200px;
+  perspective: 1000px;
 }
 
-@media screen and (max-width: 700px) {
-    h1 {
-        font-size: 64px;
-    }
-
-    h1.deutsch {
-        font-size: 64px;
-    }
+.card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  transition: transform 0.6s;
+  transform-style: preserve-3d;
+  cursor: pointer;
+  border-radius: 15px;
 }
 
-@media screen and (max-width: 550px) {
-    .skills-container {
-        font-size: 18px;
-    }
+.skill-card:hover .card-inner {
+  transform: rotateY(180deg);
 }
 
-@media screen and (max-width: 500px) {
-    h1 {
-        font-size: 40px;
-    }
-
-    h1.deutsch {
-        font-size: 40px;
-    }
+.card-front,
+.card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  border-radius: 15px;
+  backface-visibility: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
 
-@media screen and (max-width: 400px) {
-    .btn-mobile.deutsch {
-        font-size: 20px;
-    }
+.card-front {
+  background-color: #313E47;
+}
+
+.card-front img {
+  width: 120px;
+  height: 120px;
+  object-fit: contain;
+}
+
+.card-back {
+  background-color: #5b6870;
+  color: #fff;
+  transform: rotateY(180deg);
+  padding: 10px;
+  text-align: left;
+}
+
+.hoverTextContent h3 {
+  margin: 0 0 8px 0;
+  font-size: 1.2rem;
+}
+
+.hoverTextContent ul {
+  margin: 0;
+  padding-left: 1rem;
+  list-style-type: disc;
+  font-size: 0.9rem;
+  line-height: 1.4;
+}
+
+/* --------------------- */
+/* Responsive Anpassungen */
+/* --------------------- */
+@media (max-width: 1024px) {
+  .skills-grid {
+    grid-template-columns: repeat(2, 1fr); // 2 Karten pro Reihe auf mittelgroßen Screens
+  }
+}
+
+@media (max-width: 700px) {
+  .skills-grid {
+    grid-template-columns: 1fr; // 1 Karte pro Reihe auf kleinen Screens
+    gap: 1.5rem;
+  }
+
+  .skill-card {
+    width: 100%; // volle Breite auf Mobile
+    max-width: 300px;
+    height: auto; // Höhe anpassen
+  }
+
+  .card-front img {
+    width: 100px;
+    height: 100px;
+  }
 }
