change first language german

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -9,15 +9,15 @@
                 (click)="inprint($event)" class="inprint" href="">{{ "Inprint" | translate}}</a>
         </div>
         <div class="flex">
-            <img src="assets/c.png" alt="">
+
             <div>
-                <span class="name">Artur Marbach 2024</span>
+                <span class="name">&copy; Artur Marbach 2026</span>
             </div>
         </div>
         <div class="link-section">
             <a routerLink="">
                 <img (click)="goToUrl('g')" src="assets/github.png" alt=""></a>
-                <a [href]="'mailto:' + 'mail' + '&#64;' + 'artur-marbach.de'">
+            <a [href]="'mailto:' + 'mail' + '&#64;' + 'artur-marbach.de'">
                 <img src="assets/mail.png" alt=""></a>
             <a routerLink="">
                 <img (click)="goToUrl('l')" src="assets/linkIn.png" alt="">
