--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -16,7 +16,7 @@
                 <span>{{ "Communication" | translate}}</span>
             </div>
             <div class="contact-me">
-                <span>{{"Need a DevOps/Cloud Engineer?" | translate }} </span>
+                <span>{{"Need a DevSecOps Engineer?" | translate }}<br> </span>
                 <span><b>{{ "Contact me!" | translate}}</b></span>
             </div>
         </div>
